# mathtools

./: .editorconfig  .gitignore  LICENSE  README.md  TODO.md  package.json  pnpm-lock.yaml  todo.md
backend/: build_sidecar.py  main.py  pyinstaller.spec  requirements.txt
backend/core/: lean_bridge.py  llm_engine.py  sympy_engine.py  typst_bridge.py
backend/models/: database.py
backend/routers/: explain.py  export.py  solve.py  templates.py  verify.py
backend/schemas/: requests.py
backend/tests/: conftest.py  test_api.py  test_lean_bridge.py  test_llm_engine.py  test_sympy_engine.py  test_typst_bridge.py
client/: index.html
client/src/: App.tsx
client/src/pages/: ContentEditor.tsx  Home.tsx  Projects.tsx
docs/: exploracao-projeto.md  status-tcc.md
drizzle/: schema.ts
drizzle/meta/: 0000_snapshot.json  _journal.json
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: Editor.jsx  Explainer.jsx  LeanProver.jsx  Preview.jsx  Settings.jsx  Sidebar.jsx  SympyConsole.jsx  Toolbar.jsx  Viz2D.jsx
frontend/src/hooks/: useApi.js
frontend/src/lib/: api.js
frontend/src/lib/__tests__/: api.test.js
frontend/src/styles/: globals.css
lean/: lakefile.lean
lean/MathTools/: Basic.lean
scripts/: dev-sidecar.ps1  dev-sidecar.sh  download-model.ps1
server/: aiSuggestions.ts  db.ts  routers.ts  seoAnalyzer.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
typst/templates/: article.typ  exercise.typ
(+5 files in other folders)
