[package]
name = "mathtools"
version = "0.1.0"
description = "MathTools Offline - A mathematics toolkit for everyone"
authors = ["lu4nn3ry"]
edition = "2021"

[lib]
name = "mathtools_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["shell-open"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
